# graphics-engine

./: .gitmodules  CMakeLists.txt  README.md  README.md.bak  build.sh
app/: CMakeLists.txt
app/src/: app.cpp
cmake/: GoogleBenchmark.cmake
engine/: CMakeLists.txt  README.md
engine/src/: pch.cpp  pch.h
engine/src/core/: application.cpp  application.h  entry.h  event-dispatcher.h  event.h  file_io.cpp  file_io.h  input-system.cpp  input-system.h  inputs.cpp  inputs.h  memory.cpp  memory.h  module.h  typeid.h  window.cpp  window.h
engine/src/ecs/: component.h  ec_manager.h  entity.h  scene_manager.h  system.h
engine/src/events/: domain.h
engine/src/graphics/: device.cpp  device.h
engine/src/math/: README.md  matrix.h  quaternion.h  vector.h
engine/src/resource/: manager.h  resource.h  shader.h
engine/src/resource/io/: shader_stage.cpp  shader_stage.h
glad/: CMakeLists.txt
profile_0/: CMakeLists.txt  README.md
profile_0/src/: ComplieShaderRequest.h  IRequest.h  OctreeBuilderRequest.h  SortingRequest.h  TaskScheduler.cpp  TaskScheduler.h  Worker.cpp  Worker.h  main.cpp
testGSL/: CMakeLists.txt  README.md
testGSL/src/: main.cpp
testMemory/: CMakeLists.txt  README.md
testMemory/src/: main.cpp  mem-debugger.h
testMicroBenchmark/: CMakeLists.txt  README.md  main.cpp
testOpenGL/: CMakeLists.txt  README.md  camera.h  fp.h  gltf.cpp  gltf.h  main.cpp  matrix.h  memory.cpp  memory.h  quaternion.h  shader.h  vector.h
testOpenGL/assets/gltf/: minimum.gltf
testOpenGL/assets/shaders/: common.h  test.frag  test.vert
testSDL2/: CMakeLists.txt  main.cpp
testVulkan/: CMakeLists.txt  ext.md  main.cpp  window.h
testVulkan/assets/shaders/: test.vert
tests/: CMakeLists.txt
